--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "redis": "^5.6.0",
+    "resumable-stream": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
