--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.0-beta.7",
     "@ai-sdk/react": "^2.0.0-beta.18",
+    "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/pg": "^8.15.4",
     "ai": "^5.0.0-beta.18",
+    "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
